syntax = "proto3";

package user;

option go_package="/user";

message User {
    string user_id = 1;
    string email = 2;
}

message UserRequest {
    string user_id = 1;
}

service UserService {
    rpc GetUser (UserRequest) returns (User);
}